# dji_psdk_ros2_control

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  rosdoc2.yaml  setup.sh
.config/: doxygen.config
camera_controller/: CMakeLists.txt  README.md  package.xml
config/: parameters.yaml  transform_config.yaml
data/: seedlingLocations.txt
docs/: Doxyfile  README.md  conf.py  design.md  index.rst  installation.md
docs/html/: annotated.html  annotated_dup.js  as2__platform__dji__psdk_8cpp.html  as2__platform__dji__psdk_8cpp__incl.map  as2__platform__dji__psdk_8cpp__incl.md5  as2__platform__dji__psdk_8hpp.html  as2__platform__dji__psdk_8hpp.js  as2__platform__dji__psdk_8hpp__dep__incl.map  as2__platform__dji__psdk_8hpp__dep__incl.md5  as2__platform__dji__psdk_8hpp__incl.map  as2__platform__dji__psdk_8hpp__incl.md5  as2__platform__dji__psdk_8hpp_source.html  as2__platform__dji__psdk__node_8cpp.html  as2__platform__dji__psdk__node_8cpp.js  as2__platform__dji__psdk__node_8cpp__incl.map  as2__platform__dji__psdk__node_8cpp__incl.md5  classCoordinateTransformer-members.html  classCoordinateTransformer.html  classCoordinateTransformer.js  classGeoGimbalControl-members.html  classGeoGimbalControl.html  classGeoGimbalControl.js  classGeoGimbalControl__coll__graph.map  classGeoGimbalControl__inherit__graph.md5  classGimbalTransformNode-members.html  classGimbalTransformNode.html  classGimbalTransformNode.js  classGimbalTransformNode__coll__graph.map  classGimbalTransformNode__coll__graph.md5  classas2__platform__dji__psdk_1_1DJIMatricePSDKPlatform-members.html  classas2__platform__dji__psdk_1_1DJIMatricePSDKPlatform.html  classas2__platform__dji__psdk_1_1DJIMatricePSDKPlatform.js  classas2__platform__dji__psdk_1_1DJIMatricePSDKPlatform__coll__graph.map  classas2__platform__dji__psdk_1_1DJIMatricePSDKPlatform__inherit__graph.md5  classes.html  coordinate__transformer_8cpp.html  coordinate__transformer_8cpp__incl.map  coordinate__transformer_8cpp__incl.md5  coordinate__transformer_8hpp.html  coordinate__transformer_8hpp.js  (+96 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  namespaces_0.js  pages_0.js  pages_1.js  (+11 more)
docs/latex/: md_project_overview.tex  refman.tex
geogimbal/: CMakeLists.txt  README.md  package.xml
geogimbal/data/: target_locations.csv
geogimbal/docs/: Doxyfile  project_overview.md  usage.md
geogimbal/docs/html/: md_installation.html  md_usage.html  pages.html
geogimbal/docs/html/search/: all_1.js  searchdata.js
geogimbal/docs/latex/: md_design.tex  md_installation.tex  md_usage.tex
geogimbal/launch/: calibration.launch.py
geogimbal/src/: coordinate_transformer.cpp  geo_gimbal_control.cpp
geogimbal/srv/: SetTarget.srv
geogimbal/tests/integration_tests/: test_geo_gimbal_launch.py
geogimbal/tests/unit_tests/: test_coordinate_transformer.cpp
include/geogimbal/: controller.hpp  coordinate_transformer.hpp  geo_gimbal_control.hpp  gimbal_transform_node.hpp  psdk_interface.hpp
launch/: geo_gimbal_control.launch.py  geogimbal.launch.py
mission_bt/: CMakeLists.txt  README.md  package.xml
msg/: ProcessedGimbalCommand.msg
psdk_interface/: CMakeLists.txt  README.md  package.xml
src/: bridge.cpp  controller.cpp  geo_gimbal_control.cpp  gimbal_transform_node.cpp  main.cpp
tag_tracker/: CMakeLists.txt  README.md  package.xml
tests/unit_tests/: test_geo_gimbal_control.cpp
waypoint_manager/: CMakeLists.txt  README.md  package.xml
