<?xml version="1.0"?>
<package format="3">
  <name>geogimbal</name>
  <version>0.1.0</version>
  <description>GeoGimbal package for UAV gimbal control using ROS 2.</description>

  <!-- Maintainer(s) -->
  <maintainer email="pratikadhikari.de@gmail.com">Pratik Adhikari</maintainer>
  
  <!-- License -->
  <license>MIT</license>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>psdk_interfaces</build_depend>
  
  <!-- For converting lat/long with PROJ -->
  <build_depend>proj</build_depend>
  <exec_depend>proj</exec_depend>

  <!-- For Eigen3 -->
  <build_depend>Eigen3</build_depend>
  <exec_depend>Eigen3</exec_depend>

  <!-- For tf2 -->
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <build_depend>yaml-cpp</build_depend>
  <exec_depend>yaml-cpp</exec_depend>
  
  <!-- ROS 2 type support -->
  <build_depend>rosidl_typesupport_interface</build_depend>
  <build_depend>rosidl_typesupport_cpp</build_depend>
  <build_depend>rosidl_runtime_c</build_depend>
  <build_depend>rosidl_runtime_cpp</build_depend>

  <!-- For GTest-based unit testing -->
  <build_depend>ament_cmake_gtest</build_depend>
  
  <!-- For Python-based testing -->
  <build_depend>ament_cmake_pytest</build_depend>

  <!-- For advanced launch-based testing (Option A) -->
  <build_depend>launch_testing</build_depend>
  <build_depend>launch_testing_ament_cmake</build_depend>

  <!-- Execution dependencies (runtime) -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>psdk_interfaces</exec_depend>
  
  <exec_depend>rosidl_typesupport_interface</exec_depend>
  <exec_depend>rosidl_typesupport_cpp</exec_depend>
  <exec_depend>rosidl_runtime_c</exec_depend>
  <exec_depend>rosidl_runtime_cpp</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
  <!-- Export section -->
  <export>
    <build_type>ament_cmake</build_type>
    <rosdoc2>rosdoc2.yaml</rosdoc2>
  </export>
</package>
